--- a/package.json
+++ b/package.json
@@ -4,9 +4,15 @@
   "private": true,
   "proxy": "http://localhost:8000",
   "dependencies": {
+    "axios": "^0.19.0",
+    "moment": "^2.24.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-scripts": "3.1.2"
+    "react-redux": "^7.1.1",
+    "react-scripts": "3.1.2",
+    "react-transition-group": "^4.3.0",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -28,5 +34,10 @@
       "last 5 firefox version",
       "last 5 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-alert": "^5.5.0",
+    "react-alert-template-basic": "^1.0.0",
+    "redux": "^4.0.4"
   }
 }
